--- a/index.html
+++ b/index.html
@@ -1,7 +1,1 @@
-<html>
-<h1>Redirecting</h1>
-<script>
-var url = window.location.href.split("#")[1];
-window.location=url
-</script>
-</html>
+<html><center><h1>Loading...</h1></center><script>var url = window.location.href.split("#")[1];window.location=url</script></html>
