--- a/undefined.html
+++ b/undefined.html
@@ -57,7 +57,7 @@
       <p><strong>Malformed Request</strong></p>
 
       <p>
-        You <i>missed</i> the URL that was supposed to be there...<br>
+        You <i>missed</i> the URL that was supposed to be here...<br>
         ...but your aim is getting better!
       </p>
 
