--- a/404.html
+++ b/404.html
@@ -53,18 +53,16 @@
 
     <div class="container">
 
-      <h1>604</h1>
-      <p><strong>Malformed Request</strong></p>
+      <h1>605</h1>
+      <p><strong>Missing HTTP</strong></p>
 
       <p>
-        You <i>missed</i> the URL that was supposed to be here...<br>
-        ...but your aim is getting better!
+        That <code>https://</code> is kinda important...
       </p>
 
       <p>
-        If you created this Illumineighti link, please add<br>
-        <code>?https://example.com</code> to the end of the URL,<br>
-        replacing example.com as needed.
+        To fix this error, lease add <code>https://</code> (or <code>http://</code>)<br>
+        after the hash (<code>#</code>) in the URL above.
       </p>
 
       <p>
