--- a/404.html
+++ b/404.html
@@ -62,7 +62,7 @@
 
       <p>
         To fix this error, lease add <code>https://</code> (or <code>http://</code>)<br>
-        after the hash (<code>#</code>) in the URL above.
+        after the hash (<code>#</code>) in the URL.
       </p>
 
       <p>
