--- a/undefined.html
+++ b/undefined.html
@@ -4,7 +4,7 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'unsafe-inline'; img-src data:; connect-src 'self'">
-    <title>Cloak</title>
+    <title>Error 604</title>
     <style type="text/css" media="screen">
       body {
         background-color: #f1f1f1;
