--- a/undefined.html
+++ b/undefined.html
@@ -63,7 +63,7 @@
 
       <p>
         If you created this Illumineighti link, please add<br>
-        <code>?https://example.com</code> to the end of the URL,<br>
+        <code>#https://example.com</code> to the end of the URL,<br>
         replacing example.com as needed.
       </p>
 
